--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -88,6 +88,14 @@
     %td.required{:width => "500"} ${description}
 
 
+= jquery_template :paramTemplatePassword do
+  %tr
+    %td.code.required ${name}
+    %td
+      %input.required{:minlength => "0", :name => "${name}", :placeholder => "${dataType}", :type => "password", :value => ""}
+    %td.required{:width => "500"} ${description}
+
+
 = jquery_template :paramTemplateSelect do
   %tr
     %td.code ${name}
